2024-04-24T00:52:16Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8809277441 # 210
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-24
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 102 410 / 105 413
* notice: next accum: outdated-unq outdated-all / unq all: 102 410 / 106 414
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -2 -2 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-04-10 2024-04-23]

2024-04-14T22:28:26Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8681337890 # 182
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-14
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 101 382 / 102 410
* notice: next accum: outdated-unq outdated-all / unq all: 102 410 / 105 413
* notice: prev exec diff / last date diff / accum: unq all: +3 +3 -0 -0 / +3 +3 -0 -0 / 3 3
* notice: removed / changed dates: [2024-01-25] / [2024-04-10]

2024-02-06T00:26:30Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7792749235 # 90
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-06
* notice: last 14d: unq all: 1 28
* notice: prev accum: outdated-unq outdated-all / unq all: 100 380 / 102 410
* notice: next accum: outdated-unq outdated-all / unq all: 101 382 / 102 410
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-01-22] / []

2024-01-26T00:26:53Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7662219845 # 57