@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-04-24T00:52:16Z",
-  "count_outdated" : 410,
-  "uniques_outdated" : 102,
+  "timestamp" : "2024-04-25T00:54:39Z",
+  "count_outdated" : 413,
+  "uniques_outdated" : 105,
   "count" : 414,
   "uniques" : 106,
   "views" : [
-    {
-      "timestamp": "2024-04-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 2, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 3 ],
-      "uniques_decinc": [ 2, 3 ]
-    },
     {
       "timestamp": "2024-04-23T00:00:00Z",
       "count": 1,
